# PythonProjectTemplate

./: .gitignore  READMD.md  pyproject.toml
dependencies/: README.md
examples/: path_planner_example.py
src/pypjt/: __init__.py
src/pypjt/collision/: __init__.py  checker.py
src/pypjt/common/: __init__.py  logger.py  timer.py
src/pypjt/dynamics/: dynamics.py
src/pypjt/environment/: __init__.py  environment.py  geometry.py
src/pypjt/kinematics/: kinematics.py
src/pypjt/planner/: __init__.py  path_planner.py  trajectory_planner.py
src/pypjt/utils/: __init__.py  math_utils.py
tests/: test_path_planner.py
